remove most Guava usages
nowadays, Java standard method `List.of` does the same job as `ImmutableList.of`.

But two methods are not yet easily replaceable:
1. `HostAndPort.fromString`
2. `ByteStreams.toByteArray`